--- a/style.css
+++ b/style.css
@@ -4,15 +4,18 @@
     margin: 0px;
 }
 body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+article {
     background-color: rgb(177, 184, 147);
-    margin: 40px;
-    display: grid;
-    grid-template-areas: 
-    "header" 
-    "main" 
-    "footer";
-    grid-template-rows: 10vh 56vh 18vh;
-    grid-template-columns: 80vw;
+    width: 80vw; 
+    margin: auto;
+    display: flex;
+    flex-direction: column; 
+    justify-content: center;
+    align-content: center;
 }
 header {
     background-color: aqua;
@@ -26,19 +29,17 @@ h1 {
 }
 main {
     background-color: azure;
-    grid-area: main;
+    height: 100vh;
     display: grid;
-    grid-template-areas: 
+    grid-template-areas:
     "aside main";
     grid-template-columns: 7vw auto;
-    grid-template-rows: auto;
     /* deixar as duas áreas na parte de cima */
     /* precisa criar linhas e colunas para ajustar os elementos dentro dele */
 }
 aside.materiais {
     background-color: blue;
     width: 7vw;
-    grid-area: aside;
     display: flex;
     flex-direction: column;
     row-gap: 25px;
@@ -46,14 +47,15 @@ aside.materiais {
 button.aside {
     width: 7vw;
     height: 5vh;
+    border: none;
     border-radius: 10px;
     font-size: 0.8vw;
+    cursor: pointer;
     /* background-color: ; */
 }
 section.referencias {
     background-color: blueviolet;
-    width: 50vw;
-    grid-area: section;
+    /* width: 50vw; */
     /* para as duas seções dele: */
     display: flex;
     flex-direction: column;
@@ -61,9 +63,22 @@ section.referencias {
 }
 section.informacoes {
     width: 50vw;
+    height: 50vh;
 }
-form.formulario {
-    margin: 10px;
+form {
+    margin: 21px;
+}
+.das_informacoes {
+    font: normal normal 1em Arial;
+}
+.enviar_informacoes {
+    background-color: rgb(116, 117, 117);
+    margin: 0px 21px;
+    border: none;
+    border-radius: 7px;
+    width: 70px;
+    height: 20px;
+    cursor: pointer;
 }
 section.resultado {
     width: 50vw;
@@ -71,5 +86,8 @@ section.resultado {
 
 footer {
     background-color: bisque;
-    grid-area: footer;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
