--- a/style.css
+++ b/style.css
@@ -10,39 +10,40 @@ body {
 }
 article {
     background-color: rgb(177, 184, 147);
-    width: 80vw; 
-    margin: auto;
+    width: 98vw; 
     display: flex;
     flex-direction: column; 
-    justify-content: center;
-    align-content: center;
+    align-items: center;
 }
 header {
     background-color: aqua;
-    grid-area: header;
+    height: 8vh;
+    width: 98vw;
     /* centralizar título - h1 */
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 h1 {
     font: normal normal 2em serif;
 }
 main {
     background-color: azure;
+    width: 60vw;
     height: 100vh;
     display: grid;
     grid-template-areas:
-    "aside main";
+    "aside section";
     grid-template-columns: 7vw auto;
     /* deixar as duas áreas na parte de cima */
     /* precisa criar linhas e colunas para ajustar os elementos dentro dele */
 }
 aside.materiais {
+    grid-area: aside;
     background-color: blue;
-    width: 7vw;
     display: flex;
     flex-direction: column;
-    row-gap: 25px;
+    gap: 25px;
 }
 button.aside {
     width: 7vw;
@@ -55,21 +56,31 @@ button.aside {
 }
 section.referencias {
     background-color: blueviolet;
-    /* width: 50vw; */
-    /* para as duas seções dele: */
+    width: 53vw;
+    grid-area: section;
+    
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    gap: 25px;
 }
 section.informacoes {
-    width: 50vw;
-    height: 50vh;
+    background-color: rgb(104, 110, 116);
+    margin-top: 25px;
+    width: 35vw;
+    height: 37vh;
 }
 form {
     margin: 21px;
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
 }
-.das_informacoes {
+label.das_informacoes {
     font: normal normal 1em Arial;
+}
+input {
+    width: 21vw;
 }
 .enviar_informacoes {
     background-color: rgb(116, 117, 117);
@@ -81,7 +92,9 @@ form {
     cursor: pointer;
 }
 section.resultado {
-    width: 50vw;
+    background-color: rgb(145, 137, 127);
+    width: 35vw;
+    height: 30vh;
 }
 
 footer {
