--- a/style.css
+++ b/style.css
@@ -11,9 +11,6 @@
 * {
     margin: 0px;
 }
-/* body {
-    height: 100%;
-} */
 article {
     height: 100vh;
     width: 98vw;
@@ -137,10 +134,9 @@ section.resultado {
 }
 footer {
     grid-area: footer;
-    color: var(--um);
-    background-color: gainsboro;
-    /* background-color: var(--tres);
-    height: 50px; */
+    color: var(--dois);
+    background-color: var(--quatro);
+    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;    
