--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ article {
     width: 98vw;
     display: grid;
     grid-template-columns: 20vw 40vw 40vw;
-    grid-template-rows: 64px auto 48px;
+    grid-template-rows: 88px auto 48px;
     grid-template-areas: 
         "header header header"
         "aside main main"
@@ -41,14 +41,18 @@ h1.titulo_section {
 }
 main {
     grid-area: main;
+    width: 70vw;
     margin-top: 32px;
     box-shadow: 4px 12px 17px -12px var(--dois);
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
 }
 aside.materiais {
     grid-area: aside;
     justify-self: flex-end;
     margin-top: 32px;
-    width: 16vw;
+    width: 95%;
     box-shadow: 7px 4px 14px -14px var(--dois);
 
     display: flex;
@@ -59,7 +63,7 @@ aside.materiais {
 .site, .video, .livro, .artigo, .trabalhos {
     background-color: var(--cinco);
     color: var(--letras);
-    width: 8vw;
+    width: 113px;
     height: 5vh;
     margin-left: 10px;
     border: none;
@@ -140,4 +144,36 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;    
+}
+
+@media only screen and (max-width: 550px) {
+    h1 {
+        font: normal normal 1.7em serif;
+    }
+    aside.materiais {
+        justify-self: center;
+        width: 113px;
+    }
+    .site, .video, .livro, .artigo, .trabalhos {
+        width: 84px;
+        height: 5vh;
+        font-size: 9px;
+    }
+    main {
+        width: 73vw;
+        justify-self: center;
+        display: flex;
+        flex-direction: column;
+
+        align-items: center; 
+    }
+    section.referencias {
+        width: 59vw;
+        height: fit-content;
+        justify-self: center;
+
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+    }
 }
