--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <!-- acrescentar head.ejs -->
-
+<%- include('../partials/head'); %>
 <!-- page1 -->
 <body>
     <article class="geral">
         <header><h1>REFERÊNCIAS BIBLIOGRÁFICAS</h1></header>
+        <%- include('../partials/aside'); %>
         <!--acrescentar aside.ejs  -->
         <main class="tudo">
             <!-- onde ficará  -->
