--- a/views/partials/aside.ejs
+++ b/views/partials/aside.ejs
@@ -1,7 +1,7 @@
 <aside class="materiais">
-    <button class="site"><a href="/views/pages/site.ejs" class="site">SITE</a></button>
-    <button class="video"><a href="/views/pages/video.ejs" class="video">VÍDEO</a></button>
-    <button class="livro"><a href="/views/pages/livro.ejs" class="livro">LIVRO</a></button>
-    <button class="artigo"><a href="/views/pages/artigo.ejs" class="artigo">ARTIGO EM PDF/ONLINE</a></button>
-    <button class="trabalhos"><a href="/views/pages/trabalhos.ejs" class="trabalhos">TRABALHOS ACADÊMICOS</a></button>
+    <button class="site"><a href="site" class="site">SITE</a></button>
+    <button class="video"><a href="video" class="video">VÍDEO</a></button>
+    <button class="livro"><a href="livro" class="livro">LIVRO</a></button>
+    <button class="artigo"><a href="artigo" class="artigo">ARTIGO EM PDF/ONLINE</a></button>
+    <button class="trabalhos"><a href="trabalhos" class="trabalhos">TRABALHOS ACADÊMICOS</a></button>
 </aside>
