correção do caminho

--- a/views/pages/artigo.ejs
+++ b/views/pages/artigo.ejs
@@ -44,6 +44,6 @@
         </main>
         <footer>CRIADO POR PATRÍCIA SANTANA</footer> 
     </article>
-    <script src="main.js"></script>
+    <script src="/script/main.js"></script>
 </body>
 </html>
