--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,6 +19,6 @@
         </main>
         <footer>Criado por Patrícia Santana</footer>
     </article>
-    <script src="main.js"></script>
+    <script src="/script/main.js"></script>
 </body>
 </html>
