--- a/views/pages/site.ejs
+++ b/views/pages/site.ejs
@@ -44,6 +44,6 @@
         </main>
         <footer>CRIADO POR PATRÍCIA SANTANA</footer> 
     </article>
-    <script src="main.js"></script>
+    <%- include('../partials/script'); %>
 </body>
 </html>
