--- a/views/pages/video.ejs
+++ b/views/pages/video.ejs
@@ -41,6 +41,6 @@
         </main>
         <footer>CRIADO POR PATRÍCIA SANTANA</footer> 
     </article>
-    <script src="main.js"></script>
+    <%- include('../partials/script'); %>
 </body>
 </html>
