modificação da class

--- a/views/pages/site.ejs
+++ b/views/pages/site.ejs
@@ -36,7 +36,7 @@
                         <label class="das_informacoes" for="acesso">ACESSO EM: </label>
                         <input type="date" name="lacesso" id="acesso">
                     </form>
-                    <button type="submit" class="enviar_informacoes">ENVIAR</button>
+                    <button type="submit" class="enviar_site">ENVIAR</button>
                 </section>        
                 <!-- acrescentar done.ejs -->
                 <%- include('../partials/done'); %>
