--- a/views/pages/site.ejs
+++ b/views/pages/site.ejs
@@ -17,26 +17,26 @@
                 </div>
                 <section class="informacoes">       
                     <form action="" class="fomulario">
-                        <label class="das_informacoes" for="autor">AUTOR</label>
-                        <input type="text" name="lautor" id="autor">
+                        <label class="das_informacoes" for="author">AUTOR</label>
+                        <input type="text" name="lauthor" id="author">
                     </form>
                     <form action="" class="fomulario">
-                        <label class="das_informacoes" for="titulo">TÍTULO</label>
-                        <input type="text" name="ltitulo" id="titulo">
+                        <label class="das_informacoes" for="title">TÍTULO</label>
+                        <input type="text" name="ltitle" id="title">
                     </form>                    
                     <form action="" class="fomulario">
-                        <label class="das_informacoes" for="titulo">SUBTÍTULO</label>
-                        <input type="text" name="lsubtitulo" id="subtitulo">
+                        <label class="das_informacoes" for="subtitle">SUBTÍTULO</label>
+                        <input type="text" name="lsubtitle" id="subtitle">
                     </form>                    
                     <form action="" class="fomulario">
-                        <label class="das_informacoes" for="disponivel">DISPONÍVEL EM:</label>
-                        <input type="text" name="ldisponivel" id="disponivel">
+                        <label class="das_informacoes" for="available">DISPONÍVEL EM:</label>
+                        <input type="text" name="lavailable" id="available">
                     </form>
                     <form action="" class="formulario">
-                        <label class="das_informacoes" for="acesso">ACESSO EM: </label>
-                        <input type="date" name="lacesso" id="acesso">
+                        <label class="das_informacoes" for="acess">ACESSO EM: </label>
+                        <input type="date" name="lacess" id="acess">
                     </form>
-                    <button type="submit" class="enviar_site">ENVIAR</button>
+                    <button type="submit" class="send_site">ENVIAR</button>
                 </section>        
                 <!-- acrescentar done.ejs -->
                 <%- include('../partials/done'); %>
