exclusão do script.ejs

--- a/views/pages/artigo.ejs
+++ b/views/pages/artigo.ejs
@@ -44,6 +44,6 @@
         </main>
         <footer>CRIADO POR PATRÍCIA SANTANA</footer> 
     </article>
-    <%- include('../partials/script'); %>
+    <!-- <%- include('../partials/script'); %> -->
 </body>
 </html>
