--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,6 +19,6 @@
         </main>
         <footer>Criado por Patrícia Santana</footer>
     </article>
-    <%- include('../partials/script'); %>
+    <!-- <%- include('../partials/script'); %> -->
 </body>
 </html>
