--- a/views/pages/trabalhos.ejs
+++ b/views/pages/trabalhos.ejs
@@ -18,23 +18,23 @@
                 <section class="informacoes">       
                     <form action="" class="fomulario">
                         <label class="das_informacoes" for="autor">AUTOR</label>
-                        <input type="text" name="lautor" id="autor">
+                        <input type="text" name="lautor" id="autor" placeholder="Autor">
                     </form>
                     <form action="" class="fomulario">
                         <label class="das_informacoes" for="titulo">TÍTULO</label>
-                        <input type="text" name="ltitulo" id="titulo">
+                        <input type="text" name="ltitulo" id="titulo" placeholder="Título">
                     </form>                    
                     <form action="" class="fomulario">
                         <label class="das_informacoes" for="titulo">SUBTÍTULO</label>
-                        <input type="text" name="lsubtitulo" id="subtitulo">
+                        <input type="text" name="lsubtitulo" id="subtitulo" placeholder="Subtítulo">
                     </form>                    
                     <form action="" class="fomulario">
                         <label class="das_informacoes" for="disponivel">DISPONÍVEL EM:</label>
-                        <input type="text" name="ldisponivel" id="disponivel">
+                        <input type="text" name="ldisponivel" id="disponivel" placeholder="Disponível">
                     </form>
                     <form action="" class="formulario">
                         <label class="das_informacoes" for="acesso">ACESSO EM: </label>
-                        <input type="date" name="lacesso" id="acesso">
+                        <input type="date" name="lacesso" id="acesso" placeholder="Acesso">
                     </form>
                     <button type="submit" class="enviar_informacoes">ENVIAR</button>
                 </section>        
