--- a/views/pages/video.ejs
+++ b/views/pages/video.ejs
@@ -18,37 +18,37 @@
         
                     <form action="" class="fomulario">
                         <label class="das_informacoes" for="channel">CANAL (se não houver autor)</label>
-                        <input type="text" name="lchannel" id="channel">
+                        <input type="text" name="lchannel" id="channel" placeholder="Canal (se não houver autor)">
                     </form>
 
                     <form action="" class="fomulario">
                         <label class="das_informacoes" for="author">AUTOR (se houver)</label>
-                        <input type="text" name="lauthor" id="author">
+                        <input type="text" name="lauthor" id="author" placeholder="Autor (se houver)">
                     </form>
 
                     <form action="" class="fomulario">
                         <label class="das_informacoes" for="titulo">TÍTULO</label>
-                        <input type="text" name="ltitle" id="title">
+                        <input type="text" name="ltitle" id="title" placeholder="Título">
                     </form>     
 
                     <form action="" class="fomulario">
                         <label class="das_informacoes" for="subtitle">SUBTÍTULO</label>
-                        <input type="text" name="lsubtitle" id="subtitle">
+                        <input type="text" name="lsubtitle" id="subtitle" placeholder="Subtítulo">
                     </form>  
                     
                     <form action="" class="formulario">
                         <label class="das_informacoes" for="publication" >PUBLICADO EM:</label>
-                        <input type="date" name="lpublication" id="publication">
+                        <input type="date" name="lpublication" id="publication" placeholder="Publicação">
                     </form>
 
                     <form action="" class="fomulario">
                         <label class="das_informacoes" for="available">DISPONÍVEL EM:</label>
-                        <input type="text" name="lavailable" id="available">
+                        <input type="text" name="lavailable" id="available" placeholder="Disponível em">
                     </form>
 
                     <form action="" class="formulario">
                         <label class="das_informacoes" for="acess">ACESSO EM: </label>
-                        <input type="date" name="laccess" id="access">
+                        <input type="date" name="laccess" id="access" placeholder="Acesso em">
                     </form>
 
                     <button type="submit" class="send_video">ENVIAR</button>
