--- a/views/pages/site.ejs
+++ b/views/pages/site.ejs
@@ -20,27 +20,27 @@
 
                     <form action="" class="fomulario">
                         <label class="das_informacoes" for="author">AUTOR</label>
-                        <input type="text" name="lauthor" id="author">
+                        <input type="text" name="lauthor" id="author" placeholder="Autor">
                     </form>
 
                     <form action="" class="fomulario">
                         <label class="das_informacoes" for="title">TÍTULO</label>
-                        <input type="text" name="ltitle" id="title">
+                        <input type="text" name="ltitle" id="title" placeholder="Título">
                     </form> 
 
                     <form action="" class="fomulario">
                         <label class="das_informacoes" for="subtitle">SUBTÍTULO</label>
-                        <input type="text" name="lsubtitle" id="subtitle">
+                        <input type="text" name="lsubtitle" id="subtitle" placeholder="Subtítulo">
                     </form> 
 
                     <form action="" class="fomulario">
                         <label class="das_informacoes" for="available">DISPONÍVEL EM:</label>
-                        <input type="text" name="lavailable" id="available">
+                        <input type="text" name="lavailable" id="available" placeholder="Disponível">
                     </form>
 
                     <form action="" class="formulario">
                         <label class="das_informacoes" for="access">ACESSO EM: </label>
-                        <input type="date" name="laccess" id="access">
+                        <input type="date" name="laccess" id="access" placeholder="Acesso">
                     </form>
 
                     <button type="submit" class="send_site">ENVIAR</button>
