acréscimo de script

--- a/views/pages/livro.ejs
+++ b/views/pages/livro.ejs
@@ -36,7 +36,7 @@
                         <label class="das_informacoes" for="acesso">ACESSO EM: </label>
                         <input type="date" name="lacesso" id="acesso" placeholder="Data de acesso">
                     </form>
-                    <button type="submit" class="enviar_informacoes">ENVIAR</button>
+                    <button type="submit" class="send_book">ENVIAR</button>
                 </section>        
                 <!-- acrescentar done.ejs -->
                 <%- include('../partials/done'); %>
@@ -44,5 +44,6 @@
         </main>
         <footer>CRIADO POR PATRÍCIA SANTANA</footer> 
     </article>
+    <script src="books.js"></script>
 </body>
 </html>
