--- a/views/partials/aside.ejs
+++ b/views/partials/aside.ejs
@@ -1,7 +1,7 @@
 <aside class="materiais">
-    <button class="site"><a href="site" class="site">SITE</a></button>
-    <button class="video"><a href="video" class="video">VÍDEO</a></button>
-    <button class="livro"><a href="livro" class="livro">LIVRO</a></button>
-    <button class="artigo"><a href="artigo" class="artigo">ARTIGO EM PDF/ONLINE</a></button>
-    <button class="trabalhos"><a href="trabalhos" class="trabalhos">TRABALHOS ACADÊMICOS</a></button>
+    <button class="site"><a href="site">SITE</a></button>
+    <button class="video"><a href="video">VÍDEO</a></button>
+    <button class="ebook"><a href="ebook">EBOOK</a></button>
+    <button class="articles"><a href="artigo">ARTIGO EM PDF/ONLINE</a></button>
+    <button class="academics"><a href="trabalhos">TRABALHOS ACADÊMICOS</a></button>
 </aside>
