--- a/views/pages/site.ejs
+++ b/views/pages/site.ejs
@@ -15,9 +15,10 @@
                 <div class="legenda_section">
                     <h2 class="titulo_section">Informações para referência</h2>
                 </div>
-
+                
                 <section class="informacoes"> 
-
+                    <h3 class="subtitle_section">SITE</h3>
+                    
                     <form action="" class="fomulario">
                         <label class="das_informacoes" for="author">AUTOR</label>
                         <input type="text" name="lauthor" id="author" placeholder="Autor">
