--- a/views/pages/video.ejs
+++ b/views/pages/video.ejs
@@ -15,6 +15,7 @@
                 </div>
 
                 <section class="informacoes">
+                    <h3 class="subtitle_section">VÍDEO</h3>
         
                     <form action="" class="fomulario">
                         <label class="das_informacoes" for="channel">CANAL (se não houver autor)</label>
