--- a/views/pages/trabalhos.ejs
+++ b/views/pages/trabalhos.ejs
@@ -12,30 +12,39 @@
         <main class="tudo">
             <!-- onde ficará  -->
             <section class="referencias">
+                
                 <div class="legenda_section">
                     <h2 class="titulo_section">Informações para referência</h2>
                 </div>
-                <section class="informacoes">       
+
+                <section class="informacoes">  
+                    <h3 class="subtitle_section">TRABALHOS ACADÊMICOS</h3> 
+
                     <form action="" class="fomulario">
                         <label class="das_informacoes" for="autor">AUTOR</label>
                         <input type="text" name="lautor" id="autor" placeholder="Autor">
                     </form>
+
                     <form action="" class="fomulario">
                         <label class="das_informacoes" for="titulo">TÍTULO</label>
                         <input type="text" name="ltitulo" id="titulo" placeholder="Título">
-                    </form>                    
+                    </form>    
+
                     <form action="" class="fomulario">
                         <label class="das_informacoes" for="titulo">SUBTÍTULO</label>
                         <input type="text" name="lsubtitulo" id="subtitulo" placeholder="Subtítulo">
-                    </form>                    
+                    </form>  
+
                     <form action="" class="fomulario">
                         <label class="das_informacoes" for="disponivel">DISPONÍVEL EM:</label>
                         <input type="text" name="ldisponivel" id="disponivel" placeholder="Disponível">
                     </form>
+
                     <form action="" class="formulario">
                         <label class="das_informacoes" for="acesso">ACESSO EM: </label>
                         <input type="date" name="lacesso" id="acesso" placeholder="Acesso">
                     </form>
+
                     <button type="submit" class="enviar_informacoes">ENVIAR</button>
                 </section>        
                 <!-- acrescentar done.ejs -->
