--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,4 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerador de referências - ABNT</title>
     <link rel="stylesheet" href="/style/style.css" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Castoro+Titling&display=swap" rel="stylesheet">
 </head>
