atualização dos nomes dos arquivos

--- a/views/partials/aside.ejs
+++ b/views/partials/aside.ejs
@@ -2,6 +2,6 @@
     <button class="site"><a href="site" class="site">SITE</a></button>
     <button class="video"><a href="video" class="video">VÍDEO</a></button>
     <button class="ebook"><a href="ebook" class="ebook">EBOOK</a></button>
-    <button class="articles"><a href="artigo" class="articles">ARTIGO EM PDF/ONLINE</a></button>
-    <button class="academics"><a href="trabalhos" class="academics">TRABALHOS ACADÊMICOS</a></button>
+    <button class="articles"><a href="article" class="articles">ARTIGO EM PDF/ONLINE</a></button>
+    <button class="academics"><a href="academics" class="academics">TRABALHOS ACADÊMICOS</a></button>
 </aside>
